plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.rhkr8521'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	//AWS S3
	implementation 'software.amazon.awssdk:s3:2.27.12'

	//Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	//SpringSecurity
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//JWT
	implementation 'com.auth0:java-jwt:4.4.0'

	//OAuth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// H2
	//runtimeOnly 'com.h2database:h2'

	// MYSQL
	implementation 'mysql:mysql-connector-java:8.0.33'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
